Grease Pencil Line Art trouble with overlapping edges in orthographic views #86730

Closed
opened 2021-03-19 09:20:35 +01:00 by Marco Ferrara · 13 comments

System Information
Operating system: Linux-5.8.0-44-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.39

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-18 21:29, hash: 36deb8a48e

Short description of error
Grease pencil Line art modifier seems to have some trouble generating strokes for orthographic cameras if source object contains faces that are perpendicular to the camera.
The problem seems related to the edges that overlap in an orthographic projection and tends to disappear if a tiny rotation is applied to the object (or to the edges).

Exact steps for others to reproduce the error

  • In the default scene select the camera, change its type to Orthographic and clear its rotation to make its Z axis parallel to the scene Z axis (like a Top view)
  • Move the camera on top of the default cube (in order to frame it)
  • Create a Grease pencil Object Line art with the default Cube as source (but you can create a Collection or a Scene Line art as well)
  • No stroke appears...
    ...unless you rotate the cube (even of a very slight amount, like 0.0001° for every axis) or explode every face in a separate object (applying an Edge split modifier to the cube is not enough)

{F9899207, size=full}

GP_Line_Art_bug.blend

Thanks!

**System Information** Operating system: Linux-5.8.0-44-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.39 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-18 21:29, hash: `36deb8a48e` **Short description of error** Grease pencil Line art modifier seems to have some trouble generating strokes for orthographic cameras if source object contains faces that are perpendicular to the camera. The problem seems related to the edges that overlap in an orthographic projection and tends to disappear if a tiny rotation is applied to the object (or to the edges). **Exact steps for others to reproduce the error** - In the default scene select the camera, change its type to Orthographic and clear its rotation to make its Z axis parallel to the scene Z axis (like a Top view) - Move the camera on top of the default cube (in order to frame it) - Create a Grease pencil Object Line art with the default Cube as source (but you can create a Collection or a Scene Line art as well) - No stroke appears... ...unless you rotate the cube (even of a very slight amount, like 0.0001° for every axis) or explode every face in a separate object (applying an Edge split modifier to the cube is not enough) {[F9899207](https://archive.blender.org/developer/F9899207/Screenshot_from_2021-03-19_09-14-46.png), size=full} [GP_Line_Art_bug.blend](https://archive.blender.org/developer/F9899209/GP_Line_Art_bug.blend) Thanks!
Author

Added subscriber: @MarcoFerrara

Added subscriber: @MarcoFerrara
Member

Added subscriber: @ChengduLittleA

Added subscriber: @ChengduLittleA
YimingWu self-assigned this 2021-03-20 06:18:51 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Perpendicular faces to camera in Ortho view indeed have caused some problems in the past. I checked the file and confirmed the issue. Tried with edge split and other options combined It seems to me like a case where the internal algorithm had taken care of the problem but somehow discarded the lines. I'll see if I can fix it.

Perpendicular faces to camera in Ortho view indeed have caused some problems in the past. I checked the file and confirmed the issue. Tried with edge split and other options combined It seems to me like a case where the internal algorithm had taken care of the problem but somehow discarded the lines. I'll see if I can fix it.

This issue was referenced by 3d5239ff40

This issue was referenced by 3d5239ff40e7dc072d8e9c93fdb53817586c9935
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Fixed with commit 9db7c3db. The fix should be merged into master shortly.

Fixed with commit `9db7c3db`. The fix should be merged into master shortly.

Added subscriber: @Mauro_Amoruso

Added subscriber: @Mauro_Amoruso

Grease Pencil Line Art trouble with edges in Shifted Cameras in orthographic views

System Information
Operating system: Ubuntu 20.04.3 LTS
Graphics card: NVIDIA Corporation GK208BM [GeForce 920M] / Mesa Intel® HD Graphics 5500 (BDW GT2)

Blender Version
version: blender-3.1.0-beta+v31.517afcc858b0-linux.x86_64-release

Short description of error

Grease pencil Line art modifier seems to have some trouble generating strokes for orthographic shifted cameras
The problem seems related to the edges in an orthographic projection and disappear when the camera is not shifted (set to default value 0)

Exact steps for others to reproduce the error

- In the default scene select the camera, change its type to Orthographic and shift the camera in any value.
- Create a Grease pencil Object Line art with the default Collection 
- strokes appears distorted or out of place

Before.png

after.png

Line_art_issues_with_shifted_orthographic_camera.blend

Feel is related to same Issue so not sure if I have to open a new Bug Report.

Thanks

**Grease Pencil Line Art trouble with edges in Shifted Cameras in orthographic views** **System Information** Operating system: Ubuntu 20.04.3 LTS Graphics card: NVIDIA Corporation GK208BM [GeForce 920M] / Mesa Intel® HD Graphics 5500 (BDW GT2) **Blender Version** version: blender-3.1.0-beta+v31.517afcc858b0-linux.x86_64-release **Short description of error** Grease pencil Line art modifier seems to have some trouble generating strokes for orthographic **shifted** cameras The problem seems related to the edges in an orthographic projection and disappear when the camera is not shifted (set to default value 0) **Exact steps for others to reproduce the error** - In the default scene select the camera, change its type to Orthographic and shift the camera in any value. - Create a Grease pencil Object Line art with the default Collection - strokes appears distorted or out of place ![Before.png](https://archive.blender.org/developer/F12883779/Before.png) ![after.png](https://archive.blender.org/developer/F12883781/after.png) [Line_art_issues_with_shifted_orthographic_camera.blend](https://archive.blender.org/developer/F12883783/Line_art_issues_with_shifted_orthographic_camera.blend) Feel is related to same Issue so not sure if I have to open a new Bug Report. Thanks
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

In #86730#1312421, @Mauro_Amoruso wrote:
Feel is related to same Issue so not sure if I have to open a new Bug Report.

Please open a new report for this

> In #86730#1312421, @Mauro_Amoruso wrote: > Feel is related to same Issue so not sure if I have to open a new Bug Report. Please open a new report for this
Done https://developer.blender.org/T95984
Member

Alright I'm taking a look for this.

Alright I'm taking a look for this.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86730
No description provided.