Fix T86730: LineArt: keep contour when there's perpendicular faces.